// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M2 export payload golden > F1: LEO Site-to-Site export names both satellites, both SNPs and the backbone hop (A -> B) 1`] = `
{
  "latency": {
    "overheadRows": [
      {
        "label": "Processing margin",
        "value": "28 ms",
      },
    ],
    "overheadTotal": "28.0 ms",
    "propagationRows": [
      {
        "label": "Access A (Site A -> ONEWEB-0184)",
        "value": "3.7 ms",
      },
      {
        "label": "Feeder A (ONEWEB-0184 -> SNP)",
        "value": "4.3 ms",
      },
      {
        "label": "Backbone (SNP -> PoP -> SNP)",
        "value": "39.5 ms",
      },
      {
        "label": "Feeder B (SNP -> ONEWEB-0653)",
        "value": "4.7 ms",
      },
      {
        "label": "Access B (ONEWEB-0653 -> Site B)",
        "value": "4.0 ms",
      },
    ],
    "propagationTotal": "56.2 ms",
    "summary": "Estimated A → B one-way latency: 84.2 ms · round-trip reference: 168.4 ms",
    "total": "84.2 ms one-way",
    "warnings": [],
  },
  "oneWayPropagation": {
    "distanceKm": 12903.654207701107,
    "latencyMs": 56.19647579841314,
  },
  "performance": {
    "downlinkGbps": 0.018,
    "maxDlGbps": 0.195,
    "maxUlGbps": 0.032,
    "notes": [
      ""Downlink" = A → B (selected direction) throughput; "Uplink" = B → A (reverse direction) throughput — Site-to-Site has no physical downlink/uplink distinction.",
    ],
    "rttLabel": "Round-trip reference",
    "rttMs": 168.39295159682626,
    "uplinkGbps": 0.022,
  },
  "radioPath": "Site A -> ONEWEB-0184 -> SNP Mornac -> London -> SNP Manassas -> ONEWEB-0653 -> Site B",
  "routeLines": [
    "Site A -> ONEWEB-0184",
    "Distance: 1100 km (3.7 ms)",
    "ONEWEB-0184 -> SNP Mornac",
    "Distance: 1300 km (4.3 ms)",
    "SNP Mornac -> London -> SNP Manassas",
    "Distance: 7904 km (39.5 ms)",
    "SNP Manassas -> ONEWEB-0653",
    "Distance: 1400 km (4.7 ms)",
    "ONEWEB-0653 -> Site B",
    "Distance: 1200 km (4.0 ms)",
  ],
}
`;

exports[`M2 export payload golden > freezes the GEO PDF details contract 1`] = `
{
  "latency": {
    "overheadRows": [
      {
        "label": "Traffic gateway processing delay",
        "value": "15 ms",
      },
      {
        "label": "Modem processing delay",
        "value": "20 ms",
      },
      {
        "label": "Routing delay",
        "value": "5 ms",
      },
    ],
    "overheadTotal": "40.0 ms",
    "propagationRows": [
      {
        "label": "User -> Satellite",
        "value": "128.1 ms",
      },
      {
        "label": "Satellite -> Traffic Gateway",
        "value": "126.1 ms",
      },
      {
        "label": "Traffic Gateway -> Satellite",
        "value": "126.1 ms",
      },
      {
        "label": "Satellite -> User",
        "value": "128.1 ms",
      },
    ],
    "propagationTotal": "508.4 ms",
    "summary": "Estimated RTT total: 548.4 ms",
    "total": "548.4 ms",
    "warnings": [],
  },
  "oneWayPropagation": {
    "distanceKm": 76212,
    "latencyMs": 254.2,
  },
  "performance": {
    "downlinkEstimated": false,
    "downlinkGbps": 0.018,
    "maxDlGbps": 0.8,
    "maxUlGbps": 0.3,
    "notes": [
      "Basis: Selected link budget",
      "Endpoint A modem: iDirect MDM5010 · ST Engineering iDirect release — 300 Mbps return / 800 Mbps outbound in VSAT mode. · Official release · 2023-06-05",
      "Endpoint B / gateway modem: iDirect MDM2510 · ST Engineering iDirect MDM2510 product sheet — up to 150 Mbps non-directional. · D0001062 RevB",
    ],
    "performanceFactor": 0.4,
    "rttLabel": "End-to-End GEO RTT",
    "rttMs": 548.4,
    "stability": "Medium",
    "uplinkEstimated": false,
    "uplinkGbps": 0.009,
  },
  "radioPath": "User -> EUTELSAT TEST -> Rambouillet -> EUTELSAT TEST -> User",
  "routeLines": [
    "User -> Ku Europe",
    "Elevation: 34.2 deg | Slant range: 38412 km (128.1 ms)",
    "Rambouillet -> EUTELSAT TEST",
    "Slant range: 37800 km (126.1 ms)",
  ],
}
`;

exports[`M2 export payload golden > freezes the GEO-scope star-return payload direction mapping 1`] = `
{
  "cesiumViewerRef": undefined,
  "dataProvenance": {
    "entries": [
      {
        "asOf": 1784534400000,
        "id": "ephemeris",
        "label": "Orbital ephemeris (TLE)",
        "nature": "published",
        "note": "Public tracking data, not an operator ephemeris",
        "source": "CelesTrak GP/TLE feed (EUTELSAT TEST)",
      },
      {
        "asOf": null,
        "id": "coverage-frequency",
        "label": "Coverage & frequency plan",
        "nature": "inferred",
        "note": "Specific source metadata is not retained for this scenario",
        "source": "Coverage and frequency inputs retained by the analysis engine",
      },
      {
        "asOf": null,
        "id": "capacity-load",
        "label": "Capacity & network load",
        "nature": "modeled",
        "note": "Computed for this analysis; no live operational load telemetry",
        "source": "GEO link-budget and capacity model",
      },
      {
        "asOf": null,
        "id": "terminal",
        "label": "Terminal profile",
        "nature": "estimated",
        "note": "Selected endpoint modem catalogue profiles; verify topology and published directional limits.",
        "source": "iDirect MDM5010 ↔ iDirect MDM2510",
      },
      {
        "asOf": null,
        "id": "weather",
        "label": "Weather availability",
        "nature": "estimated",
        "note": "Indicative planning context, not an SLA or live measurement",
        "source": "Indicative weather / rain-region heuristic · Light rain",
      },
    ],
    "generatedAt": "2026-07-22T00:00:00.000Z",
  },
  "evidenceSummary": {
    "architectureChoice": "GEO feasibility path",
    "availabilityContext": "Weather-sensitive (99.1% indicative, fade risk ~1.5 dB)",
    "confidence": "High 89/100",
    "confidenceReasons": [
      "Scenario: Inputs ready",
      "Service gates: Not evaluated",
      "Path: GEO route resolved",
      "Link Budget: 4.5 dB · closes",
      "Delivery: Shared capacity limiting",
    ],
    "expectedPerformance": "Downlink throughput: 18 Mbps / Uplink throughput: 9 Mbps",
    "limitingFactor": "Shared capacity",
  },
  "geoData": {
    "distance": 38412,
    "downlinkGbps": 0.018,
    "downloadEstimated": false,
    "elevation": 34.2,
    "name": "EUTELSAT TEST",
    "radioPath": "User → EUTELSAT TEST → User",
    "rtt": 548.4,
    "serviceReason": "Service available — constrained by shared capacity",
    "serviceState": "constrained",
    "stability": "Medium",
    "throughputEstimated": false,
    "uplinkGbps": 0.009,
    "uploadEstimated": false,
  },
  "geoDetails": {
    "latency": {
      "overheadRows": [
        {
          "label": "Traffic gateway processing delay",
          "value": "15 ms",
        },
        {
          "label": "Modem processing delay",
          "value": "20 ms",
        },
        {
          "label": "Routing delay",
          "value": "5 ms",
        },
      ],
      "overheadTotal": "40.0 ms",
      "propagationRows": [
        {
          "label": "User -> Satellite",
          "value": "128.1 ms",
        },
        {
          "label": "Satellite -> Traffic Gateway",
          "value": "126.1 ms",
        },
        {
          "label": "Traffic Gateway -> Satellite",
          "value": "126.1 ms",
        },
        {
          "label": "Satellite -> User",
          "value": "128.1 ms",
        },
      ],
      "propagationTotal": "508.4 ms",
      "summary": "Estimated RTT total: 548.4 ms",
      "total": "548.4 ms",
      "warnings": [],
    },
    "oneWayPropagation": {
      "distanceKm": 76212,
      "latencyMs": 254.2,
    },
    "performance": {
      "downlinkEstimated": false,
      "downlinkGbps": 0.018,
      "maxDlGbps": 0.8,
      "maxUlGbps": 0.3,
      "notes": [
        "Basis: Selected link budget",
        "Endpoint A modem: iDirect MDM5010 · ST Engineering iDirect release — 300 Mbps return / 800 Mbps outbound in VSAT mode. · Official release · 2023-06-05",
        "Endpoint B / gateway modem: iDirect MDM2510 · ST Engineering iDirect MDM2510 product sheet — up to 150 Mbps non-directional. · D0001062 RevB",
      ],
      "performanceFactor": 0.4,
      "rttLabel": "End-to-End GEO RTT",
      "rttMs": 548.4,
      "stability": "Medium",
      "uplinkEstimated": false,
      "uplinkGbps": 0.009,
    },
    "radioPath": "User -> EUTELSAT TEST -> Rambouillet -> EUTELSAT TEST -> User",
    "routeLines": [
      "User -> Ku Europe",
      "Elevation: 34.2 deg | Slant range: 38412 km (128.1 ms)",
      "Rambouillet -> EUTELSAT TEST",
      "Slant range: 37800 km (126.1 ms)",
    ],
  },
  "globeRef": undefined,
  "leoData": null,
  "leoDetails": null,
  "location": {
    "lat": 48.86,
    "lng": 2.35,
    "name": undefined,
  },
  "scope": "GEO",
}
`;

exports[`M2 export payload golden > freezes the LEO PDF details contract 1`] = `
{
  "latency": {
    "overheadRows": [
      {
        "label": "Gateway processing delay",
        "value": "15 ms",
      },
      {
        "label": "Modem processing delay",
        "value": "20 ms",
      },
      {
        "label": "Routing delay",
        "value": "10 ms",
      },
      {
        "label": "Queueing delay",
        "value": "9 ms",
      },
    ],
    "overheadTotal": "53.6 ms",
    "propagationRows": [
      {
        "label": "Site A -> Satellite",
        "value": "4.1 ms",
      },
      {
        "label": "Satellite -> SNP",
        "value": "4.9 ms",
      },
      {
        "label": "SNP -> Satellite",
        "value": "4.9 ms",
      },
      {
        "label": "Satellite -> Site A",
        "value": "4.3 ms",
      },
    ],
    "propagationTotal": "18.2 ms",
    "summary": "Estimated RTT total: 71.8 ms",
    "total": "71.8 ms",
    "warnings": [],
  },
  "oneWayPropagation": {
    "distanceKm": 2624,
    "latencyMs": 9.1,
  },
  "performance": {
    "downlinkGbps": 0.018,
    "maxDlGbps": 0.195,
    "maxUlGbps": 0.032,
    "notes": [
      "Weather profile: Clear sky (95% link factor)",
      "Main bottleneck: None",
    ],
    "performanceFactor": 0.62,
    "rttLabel": "End-to-End LEO RTT",
    "rttMs": 71.8,
    "stability": "High",
    "uplinkGbps": 0.012,
  },
  "radioPath": "Site A -> ONEWEB-0123 -> SNP Svalbard -> ONEWEB-0123 -> Site A",
  "routeLines": [
    "Site A -> ONEWEB-0123 · Beam 7",
    "Elevation: 54.2 deg | Distance: 1204 km (4.1 ms)",
    "SNP Svalbard -> ONEWEB-0123",
    "Elevation: 38.6 deg | Distance: 1420 km (4.9 ms)",
  ],
}
`;

exports[`M2 export payload golden > freezes the LEO PDF details no-SNP fallback 1`] = `
{
  "oneWayPropagation": {
    "distanceKm": 1204,
    "latencyMs": 4.01611170618575,
  },
  "performance": {
    "downlinkGbps": null,
    "maxDlGbps": 0.195,
    "maxUlGbps": 0.032,
    "notes": [
      "No performance data is available without SNP connectivity.",
    ],
    "rttLabel": "End-to-End LEO RTT",
    "rttMs": null,
    "uplinkGbps": null,
  },
  "radioPath": "Site A -> ONEWEB-0123 (-> No SNP connectivity)",
  "routeLines": [
    "Site A -> ONEWEB-0123 · Beam 7",
    "Elevation: 54.2 deg | Distance: 1204 km",
  ],
}
`;

exports[`M2 export payload golden > freezes the full export payload for an ALL-scope LEO-focused scenario 1`] = `
{
  "cesiumViewerRef": undefined,
  "dataProvenance": {
    "entries": [
      {
        "asOf": 1784635200000,
        "id": "ephemeris",
        "label": "Orbital ephemeris (TLE)",
        "nature": "published",
        "note": "Public tracking data, not an operator ephemeris",
        "source": "CelesTrak GP/TLE feed (ONEWEB-0123)",
      },
      {
        "asOf": null,
        "id": "coverage-frequency",
        "label": "Coverage & frequency plan",
        "nature": "modeled",
        "note": "Planning geometry, not an operator coverage commitment",
        "source": "Modeled OneWeb beam geometry with public Ku-band assumptions",
      },
      {
        "asOf": null,
        "id": "capacity-load",
        "label": "Capacity & network load",
        "nature": "modeled",
        "note": "Computed for this analysis; no live operational load telemetry",
        "source": "Simulation engine (5-pillar model)",
      },
      {
        "asOf": null,
        "id": "terminal",
        "label": "Terminal profile",
        "nature": "published",
        "note": "Public terminal specification",
        "source": "Intellian OW70L · Intellian OW70L-Dac public RF spec sheet",
      },
      {
        "asOf": null,
        "id": "weather",
        "label": "Weather availability",
        "nature": "estimated",
        "note": "Indicative planning context, not an SLA or live measurement",
        "source": "Indicative weather / rain-region heuristic · Clear",
      },
    ],
    "generatedAt": "2026-07-22T00:00:00.000Z",
  },
  "evidenceSummary": {
    "architectureChoice": "LEO feasibility path",
    "availabilityContext": "Robust (99.8% indicative, fade risk ~0.0 dB)",
    "confidence": "High 91/100",
    "confidenceReasons": [
      "Scenario: Inputs ready",
      "Service gates: Allowed",
      "Path: Satellite and ground path resolved",
      "Link Budget: 19.0 dB · closes",
      "Delivery: 18 Mbps delivered",
    ],
    "expectedPerformance": "Downlink throughput: 18 Mbps / Uplink throughput: 12 Mbps",
    "limitingFactor": "No primary limiter detected",
  },
  "geoData": {
    "distance": 38412,
    "downlinkGbps": 0.018,
    "downloadEstimated": false,
    "elevation": 34.2,
    "name": "EUTELSAT TEST",
    "radioPath": "User → EUTELSAT TEST → User",
    "rtt": 548.4,
    "serviceReason": "Service available — constrained by shared capacity",
    "serviceState": "constrained",
    "stability": "Medium",
    "throughputEstimated": false,
    "uplinkGbps": 0.009,
    "uploadEstimated": false,
  },
  "geoDetails": {
    "latency": {
      "overheadRows": [
        {
          "label": "Traffic gateway processing delay",
          "value": "15 ms",
        },
        {
          "label": "Modem processing delay",
          "value": "20 ms",
        },
        {
          "label": "Routing delay",
          "value": "5 ms",
        },
      ],
      "overheadTotal": "40.0 ms",
      "propagationRows": [
        {
          "label": "User -> Satellite",
          "value": "128.1 ms",
        },
        {
          "label": "Satellite -> Traffic Gateway",
          "value": "126.1 ms",
        },
        {
          "label": "Traffic Gateway -> Satellite",
          "value": "126.1 ms",
        },
        {
          "label": "Satellite -> User",
          "value": "128.1 ms",
        },
      ],
      "propagationTotal": "508.4 ms",
      "summary": "Estimated RTT total: 548.4 ms",
      "total": "548.4 ms",
      "warnings": [],
    },
    "oneWayPropagation": {
      "distanceKm": 76212,
      "latencyMs": 254.2,
    },
    "performance": {
      "downlinkEstimated": false,
      "downlinkGbps": 0.018,
      "maxDlGbps": 0.8,
      "maxUlGbps": 0.3,
      "notes": [
        "Basis: Selected link budget",
        "Endpoint A modem: iDirect MDM5010 · ST Engineering iDirect release — 300 Mbps return / 800 Mbps outbound in VSAT mode. · Official release · 2023-06-05",
        "Endpoint B / gateway modem: iDirect MDM2510 · ST Engineering iDirect MDM2510 product sheet — up to 150 Mbps non-directional. · D0001062 RevB",
      ],
      "performanceFactor": 0.4,
      "rttLabel": "End-to-End GEO RTT",
      "rttMs": 548.4,
      "stability": "Medium",
      "uplinkEstimated": false,
      "uplinkGbps": 0.009,
    },
    "radioPath": "User -> EUTELSAT TEST -> Rambouillet -> EUTELSAT TEST -> User",
    "routeLines": [
      "User -> Ku Europe",
      "Elevation: 34.2 deg | Slant range: 38412 km (128.1 ms)",
      "Rambouillet -> EUTELSAT TEST",
      "Slant range: 37800 km (126.1 ms)",
    ],
  },
  "globeRef": undefined,
  "leoData": {
    "distance": 1204,
    "downlinkGbps": 0.018,
    "elevation": 54.2,
    "name": "ONEWEB-0123",
    "radioPath": "User → ONEWEB-0123 → SNP Svalbard → ONEWEB-0123 → User",
    "rtt": 71.8,
    "serviceReason": "Service available",
    "serviceState": "available",
    "stability": "High",
    "uplinkGbps": 0.012,
  },
  "leoDetails": {
    "latency": {
      "overheadRows": [
        {
          "label": "Gateway processing delay",
          "value": "15 ms",
        },
        {
          "label": "Modem processing delay",
          "value": "20 ms",
        },
        {
          "label": "Routing delay",
          "value": "10 ms",
        },
        {
          "label": "Queueing delay",
          "value": "9 ms",
        },
      ],
      "overheadTotal": "53.6 ms",
      "propagationRows": [
        {
          "label": "Site A -> Satellite",
          "value": "4.1 ms",
        },
        {
          "label": "Satellite -> SNP",
          "value": "4.9 ms",
        },
        {
          "label": "SNP -> Satellite",
          "value": "4.9 ms",
        },
        {
          "label": "Satellite -> Site A",
          "value": "4.3 ms",
        },
      ],
      "propagationTotal": "18.2 ms",
      "summary": "Estimated RTT total: 71.8 ms",
      "total": "71.8 ms",
      "warnings": [],
    },
    "oneWayPropagation": {
      "distanceKm": 2624,
      "latencyMs": 9.1,
    },
    "performance": {
      "downlinkGbps": 0.018,
      "maxDlGbps": 0.195,
      "maxUlGbps": 0.032,
      "notes": [
        "Weather profile: Clear sky (95% link factor)",
        "Main bottleneck: None",
      ],
      "performanceFactor": 0.62,
      "rttLabel": "End-to-End LEO RTT",
      "rttMs": 71.8,
      "stability": "High",
      "uplinkGbps": 0.012,
    },
    "radioPath": "Site A -> ONEWEB-0123 -> SNP Svalbard -> ONEWEB-0123 -> Site A",
    "routeLines": [
      "Site A -> ONEWEB-0123 · Beam 7",
      "Elevation: 54.2 deg | Distance: 1204 km (4.1 ms)",
      "SNP Svalbard -> ONEWEB-0123",
      "Elevation: 38.6 deg | Distance: 1420 km (4.9 ms)",
    ],
  },
  "location": {
    "lat": 48.86,
    "lng": 2.35,
    "name": "Paris, France",
  },
  "scope": "ALL",
}
`;
